--- a/package.json
+++ b/package.json
@@ -26,11 +26,24 @@
   "author": "Fido Team",
   "license": "MIT",
   "engines": {
-    "node": ">=16.0.0",
+    "node": ">=18.0.0",
     "npm": ">=8.0.0"
   },
+  "dependencies": {
+    "bcrypt": "^6.0.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.5.1",
+    "express-validator": "^7.2.1",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.16.3",
+    "openai": "^4.20.1"
+  },
   "devDependencies": {
-    "nodemon": "^3.0.0",
+    "nodemon": "^3.0.1",
     "concurrently": "^8.0.0"
   },
   "repository": {
